--- a/config/Shadowrocket/config_iOS🇼🇸.conf
+++ b/config/Shadowrocket/config_iOS🇼🇸.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2025-01-11 10:58:42
+# Shadowrocket: 2025-02-22 12:51:30
 [General]
 bypass-system = true
 skip-proxy = 10.0.0.0/8,172.16.0.0/12,localhost,*.local,*.fusir.top,*.fusir.eu.org,*.apple.com,apple.com.cn,apple.com
@@ -6,7 +6,7 @@ tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 17
 dns-server = 119.29.29.29,114.114.114.114,223.5.5.5,system
 fallback-dns-server = system
 ipv6 = true
-prefer-ipv6 = false
+prefer-ipv6 = true
 dns-fallback-system = false
 dns-direct-system = false
 icmp-auto-reply = true
@@ -24,15 +24,15 @@ private-ip-answer = false
 # ✈️ 机场选择 = url-test,YBNET,interval=600,tolerance=0,timeout=3,select=0,url=http://www.gstatic.com/generate_204
 
 
-🚀 节点选择 = select,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点,🎯 全球直连,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
-📹 YouTube = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点,select=0
-🍀 Google = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点 select=0
-🤖️ ChatGPT = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点, select=0
-💻 GitHub = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点, select=0
-🐬 Twitter = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点, select=0
+🚀 节点选择 = select,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点,🎯 全球直连,policy-select-name=♻️ 自动选择,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
+📹 YouTube = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点,policy-select-name=♻️ 自动选择,select=0
+🍀 Google = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点 select=0,policy-select-name=♻️ 自动选择
+🤖️ ChatGPT = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点,policy-select-name=🚀 节点选择,select=0
+💻 GitHub = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点,policy-select-name=♻️ 自动选择,select=0
+🐬 Twitter = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点,policy-select-name=♻️ 自动选择,select=0
 🪟 Microsoft = select,🌐 全部节点,🎯 全球直连,policy-select-name=🎯 全球直连,select=0
 🎵 TikTok = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点, select=0
-📲 Telegram = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点, select=0
+📲 Telegram = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点,policy-select-name=♻️ 自动选择,select=0
 🎥 Netflix = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点,select=0
 📷 Instagram = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点, select=0
 💶 PayPal = select,🚀 节点选择,🇼🇸 台湾节点,🇭🇰 香港节点,🇯🇵 日本节点,🇺🇸 美国节点,🇸🇬 狮城节点,🇰🇷 韩国节点,♻️ 自动选择,♻️ 香港自动,🌐 全部节点, select=0
@@ -42,59 +42,72 @@ private-ip-answer = false
 
 # 以下国家地区节点筛选 请自行根据机场节点名称修改正则
 
-🇭🇰 香港节点 = select,policy-select-name=🇭🇰 香港 B04V,interval=600,tolerance=100,url=http://www.gstatic.com/generate_204,timeout=5,policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
-🇼🇸 台湾节点 = select,policy-select-name=🇼🇸 台湾 A04V,interval=600,tolerance=100,url=http://www.gstatic.com/generate_204,timeout=5,policy-regex-filter=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
-🇺🇸 美国节点 = select,policy-select-name=🇺🇲 美国 B01V,interval=600,tolerance=100,url=http://www.gstatic.com/generate_204,timeout=5,policy-regex-filter=(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城)).)*$
-🇰🇷 韩国节点 = select,policy-select-name=KR-2,interval=600,tolerance=100,url=http://www.gstatic.com/generate_204,timeout=5,policy-regex-filter=(?=.*(KR|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$
-🇯🇵 日本节点 = select,policy-select-name=JP-1,interval=600,tolerance=100,url=http://www.gstatic.com/generate_204,timeout=5,policy-regex-filter=(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
-🇸🇬 狮城节点 = select,policy-select-name=SG-4,interval=600,tolerance=100,url=http://www.gstatic.com/generate_204,timeout=5,policy-regex-filter=(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$
-♻️ 自动选择 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
-♻️ 香港自动 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
-🌐 全部节点 = select,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
+🇭🇰 香港节点 = select,policy-select-name=HK2-HY2,interval=600,tolerance=100,url=http://www.gstatic.com/generate_204,timeout=5,policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
+🇼🇸 台湾节点 = select,policy-select-name=TW5-HY2,interval=600,tolerance=100,url=http://www.gstatic.com/generate_204,timeout=5,policy-regex-filter=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
+🇺🇸 美国节点 = select,policy-select-name=US4-HY2,interval=600,tolerance=100,url=http://www.gstatic.com/generate_204,timeout=5,policy-regex-filter=(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城)).)*$
+🇰🇷 韩国节点 = select,policy-select-name=KR-4,interval=600,tolerance=100,url=http://www.gstatic.com/generate_204,timeout=5,policy-regex-filter=(?=.*(KR|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$
+🇯🇵 日本节点 = select,policy-select-name=JP4-HY2,interval=600,tolerance=100,url=http://www.gstatic.com/generate_204,timeout=5,policy-regex-filter=(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
+🇸🇬 狮城节点 = select,policy-select-name=SG-2,interval=600,tolerance=100,url=http://www.gstatic.com/generate_204,timeout=5,policy-regex-filter=(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$
+♻️ 自动选择 = url-test,policy-select-name=JP4-HY2,interval=300,tolerance=50,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=.*
+♻️ 香港自动 = url-test,policy-select-name=HK4-HY2,interval=60,tolerance=50,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
+🌐 全部节点 = select,policy-select-name=DE1-HY2,interval=600,timeout=5,url=http://www.gstatic.com/generate_204,policy-regex-filter=.*
 
 [Rule]
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/XiaoMi/XiaoMi.list,DIRECT
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Wikipedia/Wikipedia.list,💻 GITHUB
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,🤖️ CHATGPT
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppleProxy/AppleProxy.list.list,🚀 节点选择
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📲 TELEGRAM
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 GITHUB
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Microsoft/Microsoft.list,🪟 MICROSOFT
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,🐬 TWITTER
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/Google/Google.list,🍀 GOOGLE
+DOMAIN-SUFFIX,deepseek.com,🚀 节点选择
+DOMAIN-KEYWORD,yahoo,🍀 GOOGLE
+DOMAIN-SUFFIX,yahoo.com,🍀 GOOGLE
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GoogleVoice/GoogleVoice.list,🇺🇸 美国节点
+DOMAIN-SUFFIX,fanmingming.com,💻 GITHUB
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Wikipedia/Wikipedia.list,💻 GITHUB
+DOMAIN-SUFFIX,zh.wikipedia.org,💻 GITHUB
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,🤖️ CHATGPT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppleProxy/AppleProxy.list.list,🚀 节点选择
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📲 TELEGRAM
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 GITHUB
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Microsoft/Microsoft.list,🪟 MICROSOFT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,🐬 TWITTER
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Shadowrocket/Google/Google.list,🍀 GOOGLE
 DOMAIN-KEYWORD,ubisoft,🎮 游戏平台
 DOMAIN-KEYWORD,steam,🎮 游戏平台
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🎵 TIKTOK
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/PayPal/PayPal.list,💶 PAYPAL
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,📷 INSTAGRAM
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Instagram/Instagram.list,📷 INSTAGRAM
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,📹 YOUTUBE
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTubeMusic/YouTubeMusic.list,📹 YOUTUBE
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎥 NETFLIX
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎥 NETFLIX
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/USMedia/USMedia.list,🇺🇸 美国节点
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/UKMedia/UKMedia.list,🚀 节点选择
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitch/Twitch.list,🚀 节点选择
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/scongf/rule/refs/heads/master/config/Shadowrocket/Proxy.list,🚀 节点选择
-DOMAIN-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/scongf/rule/refs/heads/master/config/Shadowrocket/Proxy.list,🚀 节点选择
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppStore/AppStore.list,🍎 APPLE
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 APPLE
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Weibo/Weibo.list,🎯 全球直连
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🎵 TIKTOK
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/PayPal/PayPal.list,💶 PAYPAL
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,📷 INSTAGRAM
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Instagram/Instagram.list,📷 INSTAGRAM
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,📹 YOUTUBE
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTubeMusic/YouTubeMusic.list,📹 YOUTUBE
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎥 NETFLIX
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎥 NETFLIX
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/USMedia/USMedia.list,🇺🇸 美国节点
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/UKMedia/UKMedia.list,🚀 节点选择
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitch/Twitch.list,🚀 节点选择
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/scongf/rule/refs/heads/master/config/Shadowrocket/Proxy.list,🚀 节点选择
+DOMAIN-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/scongf/rule/refs/heads/master/config/Shadowrocket/Proxy.list,🚀 节点选择
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppStore/AppStore.list,🍎 APPLE
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 APPLE
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/CCB/CCB.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/XiaoHongShu/XiaoHongShu.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ICBC/ICBC.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BOC/BOC.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/DouBan/DouBan.list,🎯 全球直连
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Weibo/Weibo.list,🎯 全球直连
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/115/115.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/DouYin/DouYin.list,DIRECT
 DOMAIN-KEYWORD,weibo,🎯 全球直连
-DOMAIN-SUFFIX,api.bilibili.com,🎯 全球直连
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,🎯 全球直连
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ByteDance/ByteDance.list,🎯 全球直连
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/WeChat/WeChat.list,DIRECT
-RULE-SET,https://whatshub.top/rule/ChinaMedia.list,🎯 全球直连
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_All.list,DIRECT
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🎯 全球直连
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaTest/ChinaTest.list,🎯 全球直连
-RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🎯 全球直连
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/XiaoMi/XiaoMi.list,DIRECT
+DOMAIN-SUFFIX,api.bilibili.com,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ByteDance/ByteDance.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/WeChat/WeChat.list,DIRECT
+RULE-SET,https://whatshub.top/rule/ChinaMedia.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_All.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaTest/ChinaTest.list,DIRECT
+RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,DIRECT
 GEOIP,CN,DIRECT
 IP-CIDR,192.168.2.0/24,FSC,no-resolve
 
-#RULE-SET,https://gh.stfsub.us.kg/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,REJECT
+#RULE-SET,https://gh.fusir.eu.org/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,REJECT
 FINAL,🐟 漏网之鱼
 
 [Host]
